@@ -344,6 +344,11 @@ The following environment variables may be used as aliases to their
 command-line counterparts:
 .\"
 .TP
+\fBPROCENV_EXEC\fR
+Alternative to \fB\-\-exec\fR.
+.PP
+.\"
+.TP
 \fBPROCENV_FILE\fR
 Alternative to \fB\-\-file\fR.
 .PP
@@ -354,8 +359,18 @@ Alternative to \fB\-\-format\fR.
 .PP
 .\"
 .TP
-\fBPROCENV_EXEC\fR
-Alternative to \fB\-\-exec\fR.
+\fBPROCENV_INDENT\fR
+Alternative to \fB\-\-indent\fR.
+.PP
+.\"
+.TP
+\fBPROCENV_INDENT_CHAR\fR
+Alternative to \fB\-\-indent\-char\fR.
+.PP
+.\"
+.TP
+\fBPROCENV_SEPARATOR\fR
+Alternative to \fB\-\-separator\fR.
 .PP
 .\"
 .TP
